<resources>

    <string name="start">Start</string>
    <string name="nsize">Enter the grid size</string>
    <string name="probability">probability</string>
    <string name="grid_size"> Grid Size</string>
    <string name="no_trails">Number of trails</string>
    <string name="chk_threshold">Show Threshold</string>
    <string name="latest_perc">Recent percolation</string>

    <string name="app_name">Percolation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">System Percolation</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Simulate</string>
    <string name="menu_slideshow">Check Threshold</string>
    <string name="image_dsc">Percolation in 3D space</string>

    <string name="mean">Threshold</string>
    <string name="std">Standard deviation</string>
    <string name="cint">95% confidence interval</string>
</resources>